src/styles/utils.scss
@import './mq.scss';

.accent {
  background-color: var(--color-black);
  background-clip: text;
  color: transparent;
  text-shadow: rgba(255, 255, 255, 0.5) 0px 3px 3px;
  font-size: larger;
  letter-spacing: 0.1em;
}

.flex {
  display: flex;
}

.block {
  display: block;
}

.inline-block {
  display: inline-block;
}

.w-full {
  width: 100%;
}

.text-center {
  text-align: center;
}

.text-left {
  text-align: left;
}

.xs-padding {
  padding: calc(var(--card-spacing) / 2);
}

.small-padding {
  padding: var(--card-spacing);
}

.medium-padding {
  padding: calc(var(--card-spacing) * 1.2);
}

.large-padding {
  padding: calc(var(--card-spacing) * 2);
}

.large-padding-bottom {
  padding-bottom: calc(var(--card-spacing) * 4);
}

.extra-large-padding-bottom {
  padding-bottom: calc(var(--card-spacing) * 8);
}

.text-white {
  color: var(--color-white);
}

.border-radius {
  border-radius: var(--border-radius);
}

.bg-gradient {
  background-image: var(--dark-gradient);
  color: var(--color-white);
}

.grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-gap: var(--grid-gap);
}

.small-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
  grid-gap: var(--small-grid-gap);
}

.flex-wrap {
  flex-wrap: wrap;
}

.flex-column {
  flex-direction: column;
}

.flex-gap {
  gap: var(--grid-gap);
}

.flex-gap-small {
  gap: var(--small-grid-gap);
}

.flex-1 {
  flex: 1;
}
.flex-2 {
  flex: 2;
}
.xs-margin-bottom {
  margin-bottom: calc(var(--small-margin) / 2);
}

.small-margin-bottom {
  margin-bottom: var(--small-margin);
}

.medium-margin-bottom {
  margin-bottom: calc(var(--small-margin) * 2);
}

.small-margin-top {
  margin-top: var(--small-margin);
}

.small-margin-right {
  margin-right: calc(var(--small-margin) / 2);
}

.medium-margin-top {
  margin-top: calc(var(--small-margin) * 2);
}

.large-margin-top {
  margin-top: calc(var(--small-margin) * 4);
}

.medium-padding-top {
  padding-top: calc(var(--card-spacing) * 2);
}

.space-between {
  justify-content: space-between;
}

.bg-black {
  background-color: var(--color-black);
  color: var(--color-white);
}

.bg-dark-blue {
  background-color: var(--color-dark-blue);
  color: var(--color-white);
}
.bg-blue {
  background-color: var(--color-blue);
  color: var(--color-white);
}

.relative {
  position: relative;
}

.no-padding-bottom {
  padding-bottom: 0;
}

.no-padding-right {
  padding-right: 0;
}

.no-padding-left {
  padding-left: 0;
}

.no-padding-top {
  padding-top: 0;
}

.stretch {
  align-items: stretch;
}

.flex-center {
  align-items: center;
}

.overflow-x-hidden {
  overflow-x: hidden;
}

.pointer {
  cursor: pointer;
}

.border-black {
  border: 2px solid var(--color-black);

  &:focus {
    outline: none;
  }
}

.text-white {
  color: var(--color-white);
}

.small-font {
  font-size: 1rem;
}

.header-padding-bottom {
  padding-bottom: calc(var(--card-spacing) * 3);
}

.header-padding-top {
  padding-top: calc(var(--card-spacing) * 6);
}

.max-w-400 {
  @include breakpoint(xl) {
    max-width: 400px;
  }
}

.max-w-600 {
  @include breakpoint(lg) {
    max-width: 600px;
  }
}

.max-w-150 {
  @include breakpoint(xl) {
    max-width: 150px;
  }
}

.max-w-50 {
  @include breakpoint(xl) {
    max-width: 50%;
  }
}

.absolute {
  position: absolute;
}

.flex-responsive {
  flex-direction: column;

  @include breakpoint(lg) {
    flex-direction: row;
  }
}

.align-start {
  align-items: flex-start;
}

.x-center {
  margin-left: auto;
  margin-right: auto;
}

.pull-right {
  margin-left: 0;
  margin-right: 0;
  @include breakpoint(xl) {
    margin-left: auto;
  }
}

.select-none {
  user-select: none;
}

.no-underline {
  text-decoration: none;
}

.border-radius-none-xs {
  border-radius: 0 !important;

  @include breakpoint(xl) {
    border-radius: var(--border-radius) !important;
  }
}

